--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="jj008.github.io">
         <meta name="author" content="sage">
         <link rel="icon" href="img/favicon.ico">
-       <title>Jaydip khunt</title>
+       <title>JJ008</title>
         <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
 
         <link rel="stylesheet" href="css/vendor/magnific-popup.css">
