--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
             <ul>
                 <li><a href="https://github.com/jj008/" target="_blank"><i class="icon icon-github"></i></a></li>
             </ul>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/jaydeep008/" target="_blank"><i class="icon icon-linkedin"></i></a></li>
+            </ul>
         </div>
+	
 
         <!-- BACKGROUND TEXT EFFECT -->
         <div class="main-bg bg-image overlay">
