--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="jj008.github.io">
-        <meta name="author" content="sage">
+        <meta name="description" content="I am Jaydeepsinh Jadeja">
+        <meta name="keywords" content="Jaydeepsinh, Jadeja, Jaydeepsinh Jadeja">
+        <meta name="author" content="Jaydeepsinh Jadeja">
         <link rel="icon" href="img/favicon.ico">
-       <title>JJ008</title>
+        <title>Jaydeepsinh Jadeja</title>
         <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
 
         <link rel="stylesheet" href="css/vendor/magnific-popup.css">
